docs/v7.1/classes/E94.md
---
layout: page
title: E94 Primitive spatiale
titleEn: E94 Space Primitive - Primitive spatiale
permalink: /v7.1/classes/E94
sidebar: v71
group: classes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Sous-classe de</strong></td>
<td class="en">
<p>E41 Appellation</p>
<p>E59 Primitive Value</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E41_Appellation</code></p>
<p><code class="language-plaintext highlighter-rouge">E59_Valeur_primitive</code></p>
</td>
</tr>
<tr>
<td><strong>Super-classe de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This class comprises instances of E59 Primitive Value for space that should be implemented with appropriate validation, precision and references to spatial coordinate systems to express geometries on or relative to Earth, or on any other stable constellations of matter, relevant to cultural and scientific documentation.</p>
<p>An instance of E94 Space Primitive defines an instance of E53 Place in the sense of a declarative place as elaborated in CRMgeo (Doerr & Hiebel 2013), which means that the identity of the place is derived from its geometric definition. Such a declarative place may allow for the approximation of instances of E53 Place defined by the actual extent of some phenomenon, such as a settlement or a riverbed, or other forms of identification rather than by an instance of E94 Space Primitive. Note that using an instance of E94 Space Primitive for approximating the actual extent of some place always defines a (declarative) instance of E53 Place in its own right.</p>
<p>Definitions of instances of E53 Place using different spatial reference systems are always definitions of different instances of E53 Place.</p>
<p>Instances of E94 Space Primitive provide the ability to link CIDOC CRM encoded data to the kinds of geometries used in maps or Geoinformation systems. They may be used for visualization of the instances of E53 Place they define, in their geographic context and for computing topological relations between places based on these geometries. E94 Space Primitive is not further elaborated upon within this model. It is considered good practice to maintain compatibility with OGC standards. </p>
</td>
<td>
<p>Cette classe comprend des instances de <code class="language-plaintext highlighter-rouge">E59_Valeur_primitive</code> pour un espace qui doivent être implémentées avec les validations, précisions et références appropriées aux systèmes de coordonnées spatiales afin d'exprimer des géométries sur ou relatives à la Terre, ou tout autre regroupement stable de matière pertinentes pour la documentation culturelle et scientifique.</p>
<p>Une instance de <code class="language-plaintext highlighter-rouge">E94_Primitive_spatiale</code> définit une instance de <code class="language-plaintext highlighter-rouge">E53_Lieu</code> au sens d'un lieu déclaratif tel qu'élaboré dans CRMgeo (Doerr et Hiebel, 2013), ce qui signifie que l'identité du lieu est dérivée de sa définition géométrique. Un tel lieu déclaratif peut permettre l'approximation d'instances de <code class="language-plaintext highlighter-rouge">E53_Lieu</code> définies par l'étendue réelle d'un phénomène, comme l'occupation d'un lieu ou un lit de rivière, ou d'autres formes d'identification plutôt que par une instance de <code class="language-plaintext highlighter-rouge">E94_Primitive_spatiale</code>. Il est à souligner que l'utilisation d'une instance de <code class="language-plaintext highlighter-rouge">E94_Primitive_spatiale</code> pour estimer l'étendue réelle d'un lieu définit toujours une instance (déclarative) à part entière de <code class="language-plaintext highlighter-rouge">E53_Lieu</code>.</p>
<p>Les définitions d'instances de <code class="language-plaintext highlighter-rouge">E53_Lieu</code> utilisant différents systèmes de référence spatiale sont toujours des définitions d'instances différentes de <code class="language-plaintext highlighter-rouge">E53_Lieu</code>.</p>
<p>Les instances de <code class="language-plaintext highlighter-rouge">E94_Primitive_spatiale</code> offrent la possibilité de lier les données codées du CIDOC CRM aux types de géométries utilisées dans les cartes ou les systèmes de géoinformation. Elles peuvent être utilisées pour visualiser les instances de <code class="language-plaintext highlighter-rouge">E53_Lieu</code> qu'elles définissent, dans leur contexte géographique et pour calculer les relations topologiques entre les lieux à partir de ces géométries. La classe <code class="language-plaintext highlighter-rouge">E94_Primitive_spatiale</code> n'est pas développée davantage dans ce modèle. Il est considéré comme une bonne pratique de maintenir la compatibilité avec les standards du Open Geospatial Consortium (OGC).  </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>Coordinate Information in GML like <gml:Point gml:id="p21" srsName="http://www.opengis.net/def/crs/EPSG/0/4326"><gml:coordinates>45.67, 88.56</gml:coordinates></gml:Point> </p>
</li>
<li><p>Coordinate Information in lat, long 48,2 13,3</p>
</li>
<li><p>Well Known Text like POLYGON ((30 10, 40 40, 20 40, 10 20, 30 10)) </p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Information sur les coordonnées en Geography Markup Language (GML) comme <gml:Point gml:id="p21" srsName="http://www.opengis.net/def/crs/EPSG/0/4326"><gml:coordinates>45.67, 88.56</gml:coordinates></gml:Point> </p>
</li>
<li><p>Information sur les coordonnées en latitude et longitude comme 48,2 13,3</p>
</li>
<li><p>Well-known text comme POLYGON ((30 10, 40 40, 20 40, 10 20, 30 10)) </p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>E94(x) ⇒ E41(x)</p>
<p>E94(x) ⇒ E59(x) </p>
</td>
<td>
<p>E94(x) ⇒ E41(x)</p>
<p>E94(x) ⇒ E59(x) </p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
<p>Le langage de balisage « Well-known text » s'écrit de différentes façons. Dans cette traduction, la forme « Well-known text » utilisée par Wikipédia a été préconisée.</p>
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
<p>Wikipédia. « Well-Known Text Representation of Geometry ». Dans <em>Wikipédia</em>. San Francisco, US-CA: Wikipédia, 20 août 2022.<a href="https://en.wikipedia.org/w/index.php?title=Well-known_text_representation_of_geometry&oldid=1105540049"><span class="underline"> </span></a><a href="https://en.wikipedia.org/w/index.php?title=Well-known_text_representation_of_geometry&oldid=1105540049"><span class="underline">https://en.wikipedia.org/w/index.php?title=Well-known_text_representation_of_geometry&oldid=1105540049</span></a>.</p>
</td>
</tr>
</tbody>
</table>
